--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 __pycache__
 db.sqlite3
 media
+.secret
 
 # Backup files # 
 *.bak 
@@ -131,3 +132,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# Debug shell scripts
+debug_sync_workshops.sh
+debug_runserver.sh
