--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,12 @@ DJANGO_CSRF_TRUSTED_ORIGINS=
 DB_NAME=rcwsmgmt
 DB_USER=rcwsmgmt
 DB_PASSWORD=
+DEFAULT_FROM_EMAIL=
+EMAIL_HOST=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_PORT=
+EMAIL_USE_TLS=
 WORKSHOPS_PER_PARTICIPANT=6
 PRETIX_URL=
 PRETIX_ORGANIZER=
