--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,12 @@ services:
       - DJANGO_DB_USER=${DB_USER}
       - DJANGO_DB_PASSWORD=${DB_PASSWORD}
       - DJANGO_DB_PORT=5432
+      - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
+      - EMAIL_HOST=${EMAIL_HOST}
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - EMAIL_PORT=${EMAIL_PORT}
+      - EMAIL_USE_TLS=${EMAIL_USE_TLS}
       - WORKSHOPS_PER_PARTICIPANT=${WORKSHOPS_PER_PARTICIPANT}
       - PRETIX_URL=${PRETIX_URL}
       - PRETIX_ORGANIZER=${PRETIX_ORGANIZER}
