Add all env options

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,11 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
 
   rcwsmgmt:
+    ports:
+      - "127.0.0.1:8000:8000"
     build: https://github.com/chschenk/rcwsmgmt.git#main
     environment:
-      - DJANGO_DEBUG=${DEBUG_DEBUG}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
       - DJANGO_CSRF_TRUSTED_ORIGINS=${DJANGO_CSRF_TRUSTED_ORIGINS}
@@ -38,5 +40,16 @@ services:
       - PRETIX_ORDER_CLAN_PRODUCT_ID=${PRETIX_ORDER_CLAN_PRODUCT_ID}
       - PRETIX_ORDER_CLAN_QUESTION_NAME=${PRETIX_ORDER_CLAN_QUESTION_NAME}
       - PRETIX_ORDER_CLAN_QUESTION_DISTRICT=${PRETIX_ORDER_CLAN_QUESTION_DISTRICT}
+      - PRETIX_ORDER_CLAN_CONTACT_GIVENNAME=${PRETIX_ORDER_CLAN_CONTACT_GIVENNAME}
+      - PRETIX_ORDER_CLAN_CONTACT_FAMILYNAME=${PRETIX_ORDER_CLAN_CONTACT_FAMILYNAME}
+      - EMAIL_FROM=${EMAIL_FROM}
+      - EMAIL_HOST=${EMAIL_HOST}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_PORT=${EMAIL_PORT}
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+
     depends_on:
       - rcwsmgmt_db
+volumes:
+  pgdata:
