Missing environment variables added

--- a/.env.sample
+++ b/.env.sample
@@ -2,10 +2,14 @@ DEBUG_DEBUG=false
 DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=
 DJANGO_CSRF_TRUSTED_ORIGINS=
-DB_NAME=rcwsmgmt
-DB_USER=rcwsmgmt
-DB_PASSWORD=
-DEFAULT_FROM_EMAIL=
+DJANGO_STATIC_ROOT=/static/
+DJANGO_DB_HOST=rcwsmgmt_db
+DJANGO_DB_BACKEND=postgresql
+DJANGO_DB_NAME=rcwsmgmt
+DJANGO_DB_USER=rcwsmgmt
+DJANGO_DB_PASSWORD=
+DJANGO_DB_PORT=5432
+EMAIL_FROM=
 EMAIL_HOST=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
@@ -22,3 +26,10 @@ PRETIX_WORKSHOP_QUESTION_DESCRIPTION=
 PRETIX_ORDER_CLAN_PRODUCT_ID=
 PRETIX_ORDER_CLAN_QUESTION_NAME=
 PRETIX_ORDER_CLAN_QUESTION_DISTRICT=
+PRETIX_ORDER_CLAN_CONTACT_GIVENNAME=
+PRETIX_ORDER_CLAN_CONTACT_FAMILYNAME=
+PRETIX_WORKSHOP_QUESTION_TIMESLOT=
+PRETIX_WORKSHOP_TIMESLOT_ANSWER_MORNING=
+PRETIX_WORKSHOP_TIMESLOT_ANSWER_AFTERNOON=
+PRETIX_WORKSHOP_TIMESLOT_ANSWER_BOTH=
+ADMIN_EMAIL=
