--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   rcwsmgmt:
     ports:
@@ -23,7 +25,7 @@ services:
       - DJANGO_DB_USER=${DB_USER}
       - DJANGO_DB_PASSWORD=${DB_PASSWORD}
       - DJANGO_DB_PORT=5432
-      - DEFAULT_FROM_EMAIL=${DEFAULT_FROM_EMAIL}
+      - EMAIL_FROM=${EMAIL_FROM}
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
@@ -42,11 +44,10 @@ services:
       - PRETIX_ORDER_CLAN_QUESTION_DISTRICT=${PRETIX_ORDER_CLAN_QUESTION_DISTRICT}
       - PRETIX_ORDER_CLAN_CONTACT_GIVENNAME=${PRETIX_ORDER_CLAN_CONTACT_GIVENNAME}
       - PRETIX_ORDER_CLAN_CONTACT_FAMILYNAME=${PRETIX_ORDER_CLAN_CONTACT_FAMILYNAME}
-      - EMAIL_FROM=${EMAIL_FROM}
-      - EMAIL_HOST=${EMAIL_HOST}
-      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
-      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
-      - EMAIL_PORT=${EMAIL_PORT}
+      - PRETIX_WORKSHOP_QUESTION_TIMESLOT=${PRETIX_WORKSHOP_QUESTION_TIMESLOT}
+      - PRETIX_WORKSHOP_TIMESLOT_ANSWER_MORNING=${PRETIX_WORKSHOP_TIMESLOT_ANSWER_MORNING}
+      - PRETIX_WORKSHOP_TIMESLOT_ANSWER_AFTERNOON=${PRETIX_WORKSHOP_TIMESLOT_ANSWER_AFTERNOON}
+      - PRETIX_WORKSHOP_TIMESLOT_ANSWER_BOTH=${PRETIX_WORKSHOP_TIMESLOT_ANSWER_BOTH}
       - ADMIN_EMAIL=${ADMIN_EMAIL}
 
     depends_on:
